--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         </div>
       </div>
     </div>
+    <div class ="color">
+      <h1> Y el dibujo </h1>
+    <img src="foto.jpeg" class="dibu" alt="dibujo_carol"></img>
+  </div>
   </div>
      <script src="dado.js"></script>
 </body>
