--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     </div>
     <div class ="color">
       <h1> Y el dibujo </h1>
-    <img src="foto.jpeg" class="dibu" alt="dibujo_carol"></img>
+      <div class="row center-align">
+        <div class="col s6 offset-s3">
+          <img src="foto.jpeg" class="dibu" alt="dibujo_carol"></img>
+        </div>
+      </div>
   </div>
   </div>
      <script src="dado.js"></script>
